Prevents the overlapping of long setup names Truncates them visually instead.

--- a/src/components/Setups/Setups.scss
+++ b/src/components/Setups/Setups.scss
@@ -17,6 +17,7 @@
         @media (min-width: $medium-width) {
             display: grid;
             grid-template-columns: repeat(2, minmax(0, 1fr));
+            column-gap: 2em;
         }
     }
 
@@ -55,8 +56,12 @@
             line-height: 1em;
 
             a {
-                display: inline-block;
+                display: block;
                 margin-right: 0.5em;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+                line-height: 1.1;
             }
 
             .comment {
